gitops/apps/hub/elk/01-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elk
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  finalizers:
    - kubernetes
