gitops/apps/hub/elk/05-Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elk
  annotations:
    kubernetes.io/ingress.class: nginx-external
    cert-manager.io/cluster-issuer: letsencrypt-trimtech
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - kibana.trimtech.com.br
      secretName: kibana.trimtech.com.br-tls
  rules:
  - host: kibana.trimtech.com.br
    http:
      paths:
      - backend:
          service:
            name: trimtech-kb-http
            port: 
              number: 5601
        path: /
        pathType: ImplementationSpecific
